tests/errors/syn_err04.kt
// incomplete if else error
if (true) println("ok") else